[metadata]
name = custom-deck
version = 0.0.1
author = Hong Soon-Yong
author_email = e406hsy@gmail.com
description = custom deck server
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/e406hsy/custom-deck-server
project_urls =
    Bug Tracker = https://github.com/e406hsy/custom-deck-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src